alignments fixed

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,3 +3,8 @@
     background: #111;
     color: white;
 }
+
+.about {
+
+    text-align: justify;
+}
